Agregar requisitos de Proyecto y cambios de carpetas

--- a/index.html
+++ b/index.html
@@ -9,26 +9,53 @@
     </head>
     <body>
         <header>
-            <ul>
-                <li>Logo</li>
-                <li>Acerca de mí</li>
-                <li>Contacto</li>
-            </ul>
+            <a href="#inicio" name="inicio">Tu nombre</a>
+            <a href="#about">Acerca de mí</a>
+            <a href="#contact">Contacto</a>
         </header>
         <main>
-            <section id="inicio">
-                <a id="inicio"></a>
-                <div><img src="Recursos/foto.jfif" width="150" height="150" /></div>
+            <section id="about">
+                <div><img src="resources/foto.jfif" id="profilepic"/></div>
+
+                <h1>¡Hola! ¡Soy Daniel!</h1>
                 <div><p>Con más de 15 años de experiencia en Soporte Ténico y Atención al cliente, tengo la experencia necesaria para para transformar toda situación en una experiencia inigualable para los usuarios.</p></div>
                 <button>Descargar CV</button>
             </section>
 
-            <section id="contacto">
-                <div><p>Puedes contactarme a través de las siguientes redes:</p></div>
-                <div id="logos"></div>
+            <section id="contact">
+                <div id="contacto">
+                    <h2>¡Contáctame!</h2>
+                    <p>Siempre me encuentro disponible en las redes sociales, y respondo todas las notificationes que recibo.</p>
+                    <p>Puedes enviarme un mensaje con los métodos y redes listados abajo.</p>
+                </div>
+                <div id="logos">
+
+                    <img src="resources/mail.png"/>
+                    <img src="resources/github.png"/>
+                    <img src="resources/linkedin.png"/>
+
+                </div>
             </section>
         </main>
-        <footer><a href="#inicio">Regresar al Inicio</a></footer>
+
+        <footer>
+            <a href="#inicio">Regresar al Inicio</a>
+        </footer>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
         <!--
     <section class="contenido">
