Aplicando más cambios, links e interacciones

--- a/index.html
+++ b/index.html
@@ -8,106 +8,56 @@
         <title>Daniel Márquez</title>
     </head>
     <body>
-        <header>
-            <a href="#inicio" name="inicio">Tu nombre</a>
-            <a href="#about">Acerca de mí</a>
-            <a href="#contact">Contacto</a>
-        </header>
-        <main>
-            <section id="about">
-                <div><img src="resources/foto.jfif" id="profilepic"/></div>
 
-                <h1>¡Hola! ¡Soy Daniel!</h1>
-                <div><p>Con más de 15 años de experiencia en Soporte Ténico y Atención al cliente, tengo la experencia necesaria para para transformar toda situación en una experiencia inigualable para los usuarios.</p></div>
-                <button>Descargar CV</button>
+        <header>
+
+            <p id="logo">Daniel<br />Márquez</p>
+
+            <nav class="nav_links">
+                <a href="#about">Acerca de mí</a>
+                <a href="#contacto">Contacto</a>
+            </nav>
+            
+        </header>
+
+        <main>
+
+            <section id="about">
+
+                <figure><img src="resources/foto.jfif" id="profilepic"/></figure>
+
+                <article>
+                    <h1>¡Hola! ¡Soy Daniel!</h1>
+                    <p>Con más de 15 años de experiencia en Soporte Ténico y Atención al cliente, tengo la experencia necesaria para para transformar toda situación en una experiencia inigualable para los usuarios.</p>
+                </article>
+
+                <button><a href="https://www.w3schools.com/CSSref/sel_hover.php" target="_blank">Descargar CV</a></button>
+
             </section>
 
-            <section id="contact">
-                <div id="contacto">
+            <section>
+
+                <article id="contacto">
                     <h2>¡Contáctame!</h2>
                     <p>Siempre me encuentro disponible en las redes sociales, y respondo todas las notificationes que recibo.</p>
                     <p>Puedes enviarme un mensaje con los métodos y redes listados abajo.</p>
-                </div>
-                <div id="logos">
+                </article>
 
-                    <img src="resources/mail.png"/>
-                    <img src="resources/github.png"/>
-                    <img src="resources/linkedin.png"/>
+                <div>
+
+                    <a href="mailto:dminventor@hotmail.com?subject=Contactar%20a%20Daniel" target="_blank" title="¡Envíame un correo!"><img src="resources/mail.png" class="icono" alt="Envíame un correo" /></a>
+                    <a href="https://github.com/aomcastor" target="_blank" title="Mi GitHub"><img src="resources/github.png" class="icono" alt="Mi GitHub" /></a>
+                    <a href="https://www.linkedin.com/in/aomcastor/" target="_blank" title="Mi LinkedIn"><img src="resources/linkedin.png" class="icono" alt="Mi LinkedIn" /></a>
 
                 </div>
+
+                <footer>
+                    <a href="#inicio">Regresar al Inicio</a>
+                </footer>
+
             </section>
+
         </main>
-
-        <footer>
-            <a href="#inicio">Regresar al Inicio</a>
-        </footer>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-        <!--
-    <section class="contenido">
-        <center><img src="Recursos/foto.jfif" width="150" height="150" /></center>
-
-        <h3>Información Personal</h3>
-        <ul>
-            <li><strong>Nacionalidad: </strong>Venezolana</li>
-            <li><strong>Teléfono: </strong>+54 9 000-0000</li>
-            <li><strong>E-mail: </strong>correo@hotmail.com</li>
-            <li><strong>Dirección: </strong>Buenos Aires, Argentina</li>
-            <li><strong>Redes Sociales: </strong><a href="https://www.linkedin.com/in/aomcastor/" target="_blank">LinkedIn</a></li>
-        </ul>
-    </section>
-
-    <section id="linea_vertical">
-    </section>
-
-    <section class="contenido">
-        <div>
-            <center><h1>Daniel Márquez</h1></center>
-            <center><h2>Técnico en Informática con enfoque en Atención al Cliente</h2></center>
-            <hr color="green">
-        </div>
-        <div>
-            <div id="descrp">
-                <p align="center">Con más de 15 años de experiencia en Soporte Ténico y Atención al cliente, tengo la experencia necesaria para para transformar toda situación en una experiencia inigualable para los usuarios.</p>
-            </div>
-
-            <div>
-                <h3>Habilidades y Destrezas</h3>
-                <ol align>
-                    <li>Alta capacidad de Enfoque para la resolución de problemas</li>
-                    <li>Empatía a la hora de asistir a los usuarios</li>
-                    <li>Ingenio y creativo para determinar causas y soluciones de las situaciones</li>
-                </ol>
-
-
-                <h3>Pasatiempos</h3>
-                <ol>
-                    <li>Mantenerme en forma en el gimnasio</li>
-                    <li>Fanático del cine, y los videojuegos</li>
-                    <li>Autodidacta con cursos de diseño</li>
-                </ol>
-            </div>
-        </div>
-    </section>
-
-        -->
-
-
-
 
     </body>
 
