Arreglando header, enlaces y funciones de clic

--- a/index.html
+++ b/index.html
@@ -5,18 +5,16 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" type="text/css" href="./style/style.css">
+        <link rel="icon" type="image/x-icon" href="./resources/icon.png">
         <title>Daniel Márquez</title>
     </head>
-    <body>
+    <body id="inicio">
 
         <header>
 
-            <p id="logo">Daniel<br />Márquez</p>
-
-            <nav class="nav_links">
-                <a href="#about">Acerca de mí</a>
-                <a href="#contacto">Contacto</a>
-            </nav>
+            <a id="logo" href="#inicio" class="nav_link">Daniel</a>
+            <a href="#about" class="nav_link">Sobre mí</a>
+            <a href="#contacto" class="nav_link">Contacto</a>
             
         </header>
 
@@ -28,7 +26,9 @@
 
                 <article>
                     <h1>¡Hola! ¡Soy Daniel!</h1>
-                    <p>Con más de 15 años de experiencia en Soporte Ténico y Atención al cliente, tengo la experencia necesaria para para transformar toda situación en una experiencia inigualable para los usuarios.</p>
+                    <p>
+                        Con más de 15 años de experiencia en Soporte Ténico y Atención al cliente, tengo la experencia para transformar toda situación en algo inigualable para los usuarios. Me considero una persona dispuesta a grandes retos.
+                    </p>
                 </article>
 
                 <button><a href="https://www.w3schools.com/CSSref/sel_hover.php" target="_blank">Descargar CV</a></button>
@@ -39,8 +39,8 @@
 
                 <article id="contacto">
                     <h2>¡Contáctame!</h2>
-                    <p>Siempre me encuentro disponible en las redes sociales, y respondo todas las notificationes que recibo.</p>
-                    <p>Puedes enviarme un mensaje con los métodos y redes listados abajo.</p>
+                    <p>Siempre me encuentro disponible en las redes sociales, y respondo todas las notificationes que recibo.<br/>¡Estoy atento a las oportunidades!</p>
+                    <p>Puedes enviarme un mensaje con los métodos y redes listados abajo.<br/>No muerden, ¡haz clic en uno!</p>
                 </article>
 
                 <div>
@@ -52,7 +52,7 @@
                 </div>
 
                 <footer>
-                    <a href="#inicio">Regresar al Inicio</a>
+                    <a href="#inicio" id="link_footer">Regresar al Inicio</a>
                 </footer>
 
             </section>
