Enlace de descarga agregada

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     </p>
                 </article>
 
-                <button><a href="https://www.w3schools.com/CSSref/sel_hover.php" target="_blank">Descargar CV</a></button>
+                <button><a href="https://drive.google.com/uc?id=1XoEK9NizH960VMTw4hlqjF6fpenJZ717&export=download">Descargar CV</a></button>
 
             </section>
 
