--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <section>
 
                 <article id="contacto">
-                    <h2>¡Contáctame!</h2>
+                    <h2>¡Hablemos!</h2>
                     <p>Siempre me encuentro disponible en las redes sociales, y respondo todas las notificationes que recibo.<br/>¡Estoy atento a las oportunidades!</p>
                     <p>Puedes enviarme un mensaje con los métodos y redes listados abajo.<br/>No muerden, ¡haz clic en uno!</p>
                 </article>
