Más correcciones, y simplificando código

--- a/index.html
+++ b/index.html
@@ -12,17 +12,17 @@
 
         <header>
 
-            <a id="logo" href="#inicio" class="nav_link">Daniel</a>
-            <a href="#about" class="nav_link">Sobre mí</a>
+            <a href="#inicio" class="nav_link" id="logo" >Daniel</a>
+            <a href="#acerca" class="nav_link">Sobre mí</a>
             <a href="#contacto" class="nav_link">Contacto</a>
             
         </header>
 
         <main>
 
-            <section id="about">
+            <section id="acerca">
 
-                <figure><img src="resources/foto.jfif" id="profilepic"/></figure>
+                <figure><img src="resources/foto.jfif" id="foto_perfil"/></figure>
 
                 <article>
                     <h1>¡Hola! ¡Soy Daniel!</h1>
@@ -51,11 +51,11 @@
 
                 </div>
 
-                <footer>
-                    <a href="#inicio" id="link_footer">Regresar al Inicio</a>
-                </footer>
-
             </section>
+
+            <footer>
+                <a href="#inicio">Regresar al Inicio</a>
+            </footer>
 
         </main>
 
